# llm-finetuner

./: .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  env.example  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile
src/domain_llm_ft/: __init__.py  cli.py
src/domain_llm_ft/config/training/: lora.yaml
src/domain_llm_ft/evaluation/: metrics.py  run_eval.py
src/domain_llm_ft/ingestion/: loaders.py
src/domain_llm_ft/preprocessing/: build_dataset.py  qa_gen.py
src/domain_llm_ft/serving/: open_model_server.py
src/domain_llm_ft/training/: trainer.py
src/domain_llm_ft/utils/: logging.py
tests/unit/: test_cli.py
