[tool.poetry]
name = "domain-llm-ft"
version = "0.1.0"
description = "Domain-specific LLM fine-tuning framework"
authors = ["Your Organization <team@your-org.com>"]
readme = "README.md"
packages = [{include = "domain_llm_ft", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = ">=2.0.0"
transformers = "^4.36.0"
peft = "^0.7.0"
accelerate = "^0.25.0"
bitsandbytes = "^0.41.0"
vllm = "^0.2.0"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
hydra-core = "^1.3.2"
datasets = "^2.16.0"
evaluate = "^0.4.1"
wandb = "^0.16.0"
pymupdf = "^1.23.0"  # PDF processing
beautifulsoup4 = "^4.12.0"  # HTML processing
markdown = "^3.5.0"
typer = "^0.9.0"
pydantic = "^2.5.0"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.12.0"
ruff = "^0.1.0"
isort = "^5.13.0"
pre-commit = "^3.6.0"
bandit = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dft = "domain_llm_ft.cli:app"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "B", "I"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3 